Added last two builders, added info for two games
Builders:
- torture
- warm ups

Games:
- Pillars
- Organic long form

--- a/pages/audience_participation.html
+++ b/pages/audience_participation.html
@@ -33,23 +33,29 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
+			<li>One or Two volunteers from the audience are selected to come stand or sit on stage.</li>
+			<li>Get a suggestion.</li>
+			<li>Two improvisers perform a scene.</li>
+			<li>Every now and then the improvisers will tap a volunteer on the shoulder and the volunteer will supply a random word.</li>
+			<li>The improvisor will then have to justify that word as if they had said it themself.</li>
 		</ul><hr>
 		<h3>Example</h3>
 		<ul>
-			<li>Example text</li>
-		</ul><hr>
-		<h3>Purpose</h3>
-		<ul>
-			<li>Purpose text</li>
+			<li>Improviser 1: Sure is a beautiful day!</li>
+			<li>Improviser 2: Yeah, on a day like this I really feel like... *taps volunteer*</li>
+			<li>Volunteer: Scooping!</li>
+			<li>Improviser 2: Scooping up some mud and just making some mud pies with you bro.</li>
+			<li>Improviser 1: Ah! That sounds amazing! I... *taps volunteer*</li>
+			<li>Volunteer: Grapes!</li>
+			<li>Improviser 1: Grapes, I think grapes are the snack we should bring.</li>
+			<li>Improviser 2: You're so thoughtful. You know I love grapes because... *taps volunteer*</li>
+			<li>Volunteer: Sniff!</li>
+			<li>Improviser 2: Sniff, the sniff aroma of grapes pleases me.</li>
 		</ul><hr>
 		<h3>Tips</h3>
 		<ul>
-			<li>Tips text</li>
-		</ul><hr>
-		<h3>Sources</h3>
-		<ul>
-			<li>Sources text</li>
+			<li>Give the audience members a chance to practice before you really start the scene.</li>
+			<li>Instruct the audience memebers to just blurt out a random word, don't try to make it fit in the context of the scene.</li>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="audience_participation.html">Audience Participation</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
