--- a/pages/character.html
+++ b/pages/character.html
@@ -43,11 +43,11 @@
 		<h3>Description</h3>
 		<ul>
 			<li>Several improvisers form a back line.</li>
-			<li>One player steps forward, they will be the chameleon.</li>
-			<li>One at a time players step off the back line to initiate a short scene with the chameleon.</li>
+			<li>One improviser steps forward, they will be the chameleon.</li>
+			<li>One at a time improviser step off the back line to initiate a short scene with the chameleon.</li>
 			<li>They should enter with a strong character choice.</li>
 			<li>The chameleon has to match their character choice and the two do a peas in a pod scene.</li>
-			<li>After a few short scenes, a new player from the back line becomes the chameleon.</li>
+			<li>After a few short scenes, a new improviser from the back line becomes the chameleon.</li>
 		</ul><hr>
 		<h3>Sources</h3>
 		<ul>
