--- a/pages/child_friendly.html
+++ b/pages/child_friendly.html
@@ -105,23 +105,23 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
+			<li>Two improvisers start a scene and a third acts as a host.</li>
+			<li>The host will ring a bell or say a phrase like change! or new decision! periodically after a line of dialogue has been said.</li>
+			<li>The improviser who said that last line of dialogue will have to say a new line of dialogue to replace it.</li>
 		</ul><hr>
 		<h3>Example</h3>
 		<ul>
-			<li>Example text</li>
-		</ul><hr>
-		<h3>Purpose</h3>
-		<ul>
-			<li>Purpose text</li>
+			<li>Improviser 1: What do you want?</li>
+			<li>Improviser 2: I want a muffin.</li>
+			<li>Host: Change!</li>
+			<li>Improviser 2: I want a whole cake to myself.</li>
+			<li>Host: Change!</li>
+			<li>Improviser 2: I want you to love me again!</li>
 		</ul><hr>
 		<h3>Tips</h3>
 		<ul>
-			<li>Tips text</li>
-		</ul><hr>
-		<h3>Sources</h3>
-		<ul>
-			<li>Sources text</li>
+			<li>Try to heighten each time you are made to change a line of dialogue and go for a drastic change on the third changed line.</li>
+			<li>As the host, utilize the rule of three most of the time, only occasionally making the improvisers change only one line of dialogue or making them change many lines in a long run of changes.</li>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - <a href="torture.html">Torture</a> - 
