--- a/pages/long_forms.html
+++ b/pages/long_forms.html
@@ -19,6 +19,9 @@
 	<div class="m-5 games-list">
 		<ul class="py-3">
 			<li>
+				<a href="#organicLongForm">Organic Long Form</a>
+			</li>
+			<li>
 				<a href="#typewriter">Typewriter</a>
 			</li>
 		</ul>
@@ -27,6 +30,35 @@
 <hr class="thick-hr">
 
 <div class="m-5">
+	<!-- ---------- ORGANIC LONG FORM ---------- -->
+	<div class="game-box p-2" id="organicLongForm">
+		<h2>Organic Long Form</h2>
+		<hr>
+		<h3>Description</h3>
+		<ul>
+			<li>This format is without any real structure.</li>
+			<li>A suggestion can be gotten at the top or the set can begin completely organically.</li>
+			<li>If a suggestion is gotten at the top, that will inspire the initiation for the first scene.</li>
+			<li>Each scene will be initiated based off something organically pulled from the improvisers mind, or from an element from the scene the preceeded it.</li>
+			<li>Imrpovisers can use any support moves or edits available to them to play the scenes before moving on to the next.</li>
+			<li>The scenes do not have to have any through line or connections.</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Doing organic sets is a great way to practice finding and playing game organically.</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Try to add variety to your scenes by varying them in length, number of performers per scene and energy level.</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="long_forms.html">Long Form</a> - <a href="performance.html">Performace</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<hr>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
 	<!-- ---------- TYPEWRITER ---------- -->
 	<div class="game-box p-2" id="typewriter">
 		<h2>Typewriter</h2>
