--- a/pages/pun.html
+++ b/pages/pun.html
@@ -33,7 +33,7 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Players get a suggestion and one at a time step forward and deliver a joke or pun with the format below.</li>
+			<li>Improvisers get a suggestion and one at a time step forward and deliver a joke or pun with the format below.</li>
 		</ul><hr>
 		<h3>Example</h3>
 		<p>Suggestion: Banana</p>
