--- a/pages/warm_ups.html
+++ b/pages/warm_ups.html
@@ -9,107 +9,255 @@
 </head>
 <header id="top">
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </header>
 <body>
 	<h1 class="text-center my-3">Warm Ups</h1>
 	<p class="text-center my-3">These games and exercises are great for getting players warmed up before a show or rehearsal.</p>
-		<div class="m-5 games-list">
-			<ul class="py-3">
-				<li>
-					<h5><a href="#badRap">Bad Rap</a></h5>
-				</li>
-				<li>
-					<h5><a href="#beastieBoys">Beastie Boys</a></h5>
-				</li>
-				<li>
-					<h5><a href="#bigBooty">Big Booty</a></h5>
-				</li>
-				<li>
-					<h5><a href="#bunnyBunny">Bunny Bunny</a></h5>
-				</li>
-				<li>
-					<h5><a href="#characterMatching">Character Matching</a></h5>
-				</li>
-				<li>
-					<h5><a href="#mindMeld">Mind Meld</a></h5>
-				</li>
-			</ul>
-		</div>
+	<div class="m-5 games-list">
+		<ul class="py-3">
+			<li>
+				<a href="#alienTigerCow">Alien Tiger Cow</a>
+			</li>
+			<li>
+				<a href="#badRap">Bad Rap</a>
+			</li>
+			<li>
+				<a href="#bigBooty">Big Booty</a>
+			</li>
+			<li>
+				<a href="#bunnyBunny">Bunny Bunny</a>
+			</li>
+			<li>
+				<a href="#characterMatching">Character Matching</a>
+			</li>
+			<li>
+				<a href="#mindMeld">Mind Meld</a>
+			</li>
+			<li>
+				<a href="#organicLongForm">Organic Long Form</a>
+			</li>
+		</ul>
+	</div>
 
 <hr class="thick-hr">
 
 <div class="m-5">
-	<!-- ---------- BAD RAP ---------- -->
-	<div class="game-box p-2" id="badRap">
-		<h3>Bad Rap</h3>
+	<!-- ---------- ALIEN TIGER COW ---------- -->
+	<div class="game-box p-2" id="alienTigerCow">
+		<h2>Alien Tiger Cow</h2>
 		<hr>
-description		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<h3>Instructions</h3>
+		<ul>
+			<li>The group forms a circle.</li>
+			<li>On the count of three all players strike a pose and make a noise as an alien, a tiger, or a cow.</li>
+		<ul>
+				<li>Alien: Hold your two index fingers up to your head like antennae and say "Bleep blorp!"</li>
+				<li>Tiger: Throw your hands out like your clawing and roar.</li>
+				<li>Cow: Hold your hands up to you stomach with your fingers sticking out like udders and say "Mooo!"</li>
+		</ul>
+			<li>Then repeat!</li>
+			<li>You can play with the intention of everyone trying to land on the same pose or eliminate the minority group each time until there is only one or two players left.</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>This is a fun easy way to warm up. Great for children or beginners.</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
-	<!-- ---------- BEASTIE BOYS ---------- -->
-	<div class="game-box p-2" id="beastieBoys">
-		<h3>Beastie Boys</h3>
+	<!-- ---------- BAD RAP ---------- -->
+	<div class="game-box p-2" id="badRap">
+		<h2>Bad Rap</h2>
 		<hr>
-description		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="performance.html">Performance/Warm Up</a> - 
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- BIG BOOTY ---------- -->
 	<div class="game-box p-2" id="bigBooty">
-		<h3>Big Booty</h3>
+		<h2>Big Booty</h2>
 		<hr>
-description		<h6>Tags</h6>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Part</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- BUNNY BUNNY ---------- -->
 	<div class="game-box p-2" id="bunnyBunny">
-		<h3>Bunny Bunny</h3>
+		<h2>Bunny Bunny</h2>
 		<hr>
-description		<h6>Tags</h6>
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="energy.html">Energy</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- CHARACTER MATCHING ---------- -->
 	<div class="game-box p-2" id="characterMatching">
-		<h3>Character Matching</h3>
+		<h2>Character Matching</h2>
 		<hr>
-description		<h6>Tags</h6>
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
 		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- MIND MELD ---------- -->
 	<div class="game-box p-2" id="mindMeld">
-		<h3>Mind Meld</h3>
+		<h2>Mind Meld</h2>
 		<hr>
-description		<h6>Tags</h6>
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- ORGANIC LONG FORM ---------- -->
+	<div class="game-box p-2" id="organicLongForm">
+		<h2>Organic Long Form</h2>
+		<hr>
+		<h3>Description</h3>
+		<ul>
+			<li>This format is without any real structure.</li>
+			<li>A suggestion can be gotten at the top or the set can begin completely organically.</li>
+			<li>If a suggestion is gotten at the top, that will inspire the initiation for the first scene.</li>
+			<li>Each scene will be initiated based off something organically pulled from the improvisers mind, or from an element from the scene the preceeded it.</li>
+			<li>Imrpovisers can use any support moves or edits available to them to play the scenes before moving on to the next.</li>
+			<li>The scenes do not have to have any through line or connections.</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Doing organic sets is a great way to practice finding and playing game organically.</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Try to add variety to your scenes by varying them in length, number of performers per scene and energy level.</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="long_forms.html">Long Form</a> - <a href="performance.html">Performace</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<hr>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -118,8 +266,8 @@ description		<h6>Tags</h6>
 </body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </footer>
 </html>
