--- a/pages/exercises.html
+++ b/pages/exercises.html
@@ -69,7 +69,7 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Two players take the stage.</li>
+			<li>Two improvisers take the stage.</li>
 			<li>A suggestion is given.</li>
 			<li>They strike a pose then hold it and wait.</li>
 			<li>After 60 seconds the teacher calls start and the scene begins.</li>
@@ -110,13 +110,13 @@
 		</ul><hr>
 		<h3>Example</h3>
 		<ul>
-			<li><strong>Player 1:</strong> "<em>We could call it The Chameleon!</em>"</li>
-			<li><strong>Player 2:</strong> "<em>Yeah! We could have Meryl Streep as the spokesperson. She could talk about how she disappears into her roles like this car disappears into it's surroundings.</em>"</li>
-			<li><strong>Player 3:</strong> "<em>Yeah! She could start off the commercial as Julia Child and then finish as Margaret Thatcher.</em>"</li>
-			<li><strong>Player 4:</strong> "<em>We could sell it to criminals! If they're being chased by the police, they can blend into their surroundings to hide.</em>"</li>
-			<li><strong>Player 3:</strong> "<em>We could take helicopter footage of a police chase and suddenly, the car disappears, blending into the highway!</em>"</li>
-			<li><strong>Player 2:</strong> "<em>When you don't want to be seen, this is your machine.</em>"</li>
-			<li><strong>Player 4:</strong> "<em>Great slogan! *Starts to sing* This car's named after a lizard that can hide, buy this car and camouflage your ride!</em>"</li>
+			<li><strong>Improviser 1:</strong> "<em>We could call it The Chameleon!</em>"</li>
+			<li><strong>Improviser 2:</strong> "<em>Yeah! We could have Meryl Streep as the spokesperson. She could talk about how she disappears into her roles like this car disappears into it's surroundings.</em>"</li>
+			<li><strong>Improviser 3:</strong> "<em>Yeah! She could start off the commercial as Julia Child and then finish as Margaret Thatcher.</em>"</li>
+			<li><strong>Improviser 4:</strong> "<em>We could sell it to criminals! If they're being chased by the police, they can blend into their surroundings to hide.</em>"</li>
+			<li><strong>Improviser 3:</strong> "<em>We could take helicopter footage of a police chase and suddenly, the car disappears, blending into the highway!</em>"</li>
+			<li><strong>Improviser 2:</strong> "<em>When you don't want to be seen, this is your machine.</em>"</li>
+			<li><strong>Improviser 4:</strong> "<em>Great slogan! *Starts to sing* This car's named after a lizard that can hide, buy this car and camouflage your ride!</em>"</li>
 		</ul><hr>
 		<h3>Purpose</h3>
 		<p>Used as an exercise, the ensemble will...</p>
@@ -267,11 +267,11 @@
 		<h3>Description</h3>
 		<ul>
 			<li>Several improvisers form a back line.</li>
-			<li>One player steps forward, they will be the chameleon.</li>
-			<li>One at a time players step off the back line to initiate a short scene with the chameleon.</li>
+			<li>One improviser steps forward, they will be the chameleon.</li>
+			<li>One at a time improviser step off the back line to initiate a short scene with the chameleon.</li>
 			<li>They should enter with a strong character choice.</li>
 			<li>The chameleon has to match their character choice and the two do a peas in a pod scene.</li>
-			<li>After a few short scenes, a new player from the back line becomes the chameleon.</li>
+			<li>After a few short scenes, a new improviser from the back line becomes the chameleon.</li>
 		</ul><hr>
 		<h3>Sources</h3>
 		<ul>
