--- a/pages/listening.html
+++ b/pages/listening.html
@@ -17,7 +17,7 @@
 	<h1 class="text-center my-3">Listening</h1>
 	<p class="text-center my-3">These games and exercises force players to use and develop good listening skills.</p>
 	<div class="m-5 games-list">
-		<ul class="py-3">
+		<ul class="py-3" aria-label="links to games and exercises on this page">
 			<li>
 				<a href="#adGame">Ad Game</a>
 			</li>
@@ -72,13 +72,13 @@
 		</ul><hr>
 		<h3>Example</h3>
 		<ul>
-			<li><strong>Player 1:</strong> "<em>We could call it The Chameleon!</em>"</li>
-			<li><strong>Player 2:</strong> "<em>Yeah! We could have Meryl Streep as the spokesperson. She could talk about how she disappears into her roles like this car disappears into it's surroundings.</em>"</li>
-			<li><strong>Player 3:</strong> "<em>Yeah! She could start off the commercial as Julia Child and then finish as Margaret Thatcher.</em>"</li>
-			<li><strong>Player 4:</strong> "<em>We could sell it to criminals! If they're being chased by the police, they can blend into their surroundings to hide.</em>"</li>
-			<li><strong>Player 3:</strong> "<em>We could take helicopter footage of a police chase and suddenly, the car disappears, blending into the highway!</em>"</li>
-			<li><strong>Player 2:</strong> "<em>When you don't want to be seen, this is your machine.</em>"</li>
-			<li><strong>Player 4:</strong> "<em>Great slogan! *Starts to sing* This car's named after a lizard that can hide, buy this car and camouflage your ride!</em>"</li>
+			<li><strong>Improviser 1:</strong> "<em>We could call it The Chameleon!</em>"</li>
+			<li><strong>Improviser 2:</strong> "<em>Yeah! We could have Meryl Streep as the spokesperson. She could talk about how she disappears into her roles like this car disappears into it's surroundings.</em>"</li>
+			<li><strong>Improviser 3:</strong> "<em>Yeah! She could start off the commercial as Julia Child and then finish as Margaret Thatcher.</em>"</li>
+			<li><strong>Improviser 4:</strong> "<em>We could sell it to criminals! If they're being chased by the police, they can blend into their surroundings to hide.</em>"</li>
+			<li><strong>Improviser 3:</strong> "<em>We could take helicopter footage of a police chase and suddenly, the car disappears, blending into the highway!</em>"</li>
+			<li><strong>Improviser 2:</strong> "<em>When you don't want to be seen, this is your machine.</em>"</li>
+			<li><strong>Improviser 4:</strong> "<em>Great slogan! *Starts to sing* This car's named after a lizard that can hide, buy this car and camouflage your ride!</em>"</li>
 		</ul><hr>
 		<h3>Purpose</h3>
 		<p>Used as an exercise, the ensemble will...</p>
@@ -300,23 +300,29 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
+			<li>One or Two volunteers from the audience are selected to come stand or sit on stage.</li>
+			<li>Get a suggestion.</li>
+			<li>Two improvisers perform a scene.</li>
+			<li>Every now and then the improvisers will tap a volunteer on the shoulder and the volunteer will supply a random word.</li>
+			<li>The improvisor will then have to justify that word as if they had said it themself.</li>
 		</ul><hr>
 		<h3>Example</h3>
 		<ul>
-			<li>Example text</li>
-		</ul><hr>
-		<h3>Purpose</h3>
-		<ul>
-			<li>Purpose text</li>
+			<li>Improviser 1: Sure is a beautiful day!</li>
+			<li>Improviser 2: Yeah, on a day like this I really feel like... *taps volunteer*</li>
+			<li>Volunteer: Scooping!</li>
+			<li>Improviser 2: Scooping up some mud and just making some mud pies with you bro.</li>
+			<li>Improviser 1: Ah! That sounds amazing! I... *taps volunteer*</li>
+			<li>Volunteer: Grapes!</li>
+			<li>Improviser 1: Grapes, I think grapes are the snack we should bring.</li>
+			<li>Improviser 2: You're so thoughtful. You know I love grapes because... *taps volunteer*</li>
+			<li>Volunteer: Sniff!</li>
+			<li>Improviser 2: Sniff, the sniff aroma of grapes pleases me.</li>
 		</ul><hr>
 		<h3>Tips</h3>
 		<ul>
-			<li>Tips text</li>
-		</ul><hr>
-		<h3>Sources</h3>
-		<ul>
-			<li>Sources text</li>
+			<li>Give the audience members a chance to practice before you really start the scene.</li>
+			<li>Instruct the audience memebers to just blurt out a random word, don't try to make it fit in the context of the scene.</li>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="audience_participation.html">Audience Participation</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
