--- a/pages/object_work.html
+++ b/pages/object_work.html
@@ -36,19 +36,24 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
-		</ul><hr>
-		<h3>Example</h3>
-		<ul>
-			<li>Example text</li>
-		</ul><hr>
-		<h3>Purpose</h3>
-		<ul>
-			<li>Purpose text</li>
+			<li><li>This is a game for 4+ improvisers where each walk-on will have to try and guess the suggestions and then convey them to the next person using only miming and gibberish.</li>
+			<li>All but one improviser leaves the room and the remaining improviser and/or host get three suggestions.</li>
+			<li>The suggestions are for an occupation, weapon, and location.</li>
+			<li>The scene starts when the starting improviser mimes killing an improviser from the backline with the murder weapon. The murdered improviser should lay on the floor and become a dead body.</li>
+			<li>Teach the audience to shout a phrase like, Oh no! There's been a murder!, each time a murder happens to summon in the next improviser.</li>
+			<li>Each improviser who enters the scene will assume the standing improviser has murdered the dead person or persons on the floor and accuse them (using only gibberish mind you).</li>
+			<li>The standing improviser then mimes the three suggestions in order.</li>
+			<li>The guessing improviser should give some indication that they think they know what the suggestion is before the miming improviser moves on to the next one.</li>
+			<li>Once the guessing improviser understands all three suggestions they then mime killing the other improviser with what they think is the murder weapon.</li>
+			<li>This cycle continues until all improviser have had their turn.</li>
+			<li>At the end we call scene and the host goes down the line and each improviser says what they think the suggestions were.</li>
+			<li>Instruct the audience to clap or make a buzzer sound based on if the improviser is correct or not.</li>
 		</ul><hr>
 		<h3>Tips</h3>
 		<ul>
-			<li>Tips text</li>
+			<li>Use the acronym O.W.L. to remember the order of the suggestions being acted out.</li>
+			<li>Really play up the gibberish and be expressive. The scene gets awkward if the improviser are too quiet or not animated enough.</li>
+			<li>The guessers shouldn't make the miming improviser spend too much time on each suggestion, as soon as you think you have an idea of what they might be doing give them the go-ahead to switch to the next suggestion. We don't want the scene to go on too long and it's funnier if the suggestions get lost along the way than if they stay the same the whole time.</li>
 		</ul><hr>
 		<h3>Sources</h3>
 		<ul>
