--- a/pages/performance.html
+++ b/pages/performance.html
@@ -344,23 +344,52 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
+			<li>Before the show have audience members write sentences on strips of paper.</li>
+			<li>These can be random silly sentences, song lyrics, lines from movies, pick-up lines, or anything else!</li>
+			<li>Set up a basic scene with a suggestion or use one of the variations below, then pass out 3-4 sentence strips to the improvisers.</li>
+			<li>The improvisers will perform a scene, occasionally pulling out a sentence strip and reading it as their dialogue.</li>
+			<li>The improvisers must then justify the line they just said.</li>
+			<li>The scene continues until the host edits, usually after they've used all their sentence strips.</li>
 		</ul><hr>
 		<h3>Example</h3>
 		<ul>
-			<li>Example text</li>
+			<li>Improviser 1: I love the sound of rain outside.</li>
+			<li>Improviser 2: Yeah I feel so peacful.</li>
+			<li>Improviser 1 pulls out a sentence strip</li>
+			<li>Improviser 1: Get rid out it, now!</li>
+			<li>Improviser 2: What?! Get rid of what?!</li>
+			<li>Improviser 1: There's spinach in your teeth! It's making me sick!</li>
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
-			<li>Purpose text</li>
+			<li>A great exercise in listening and justification.</li>
+			<li>Usually a real crowd pleaser, audience members are excited to hear the dialogue they wrote, and it's always funny to see the cast react to the out of no where line they've just said and try to justify it.</li>
 		</ul><hr>
 		<h3>Tips</h3>
 		<ul>
-			<li>Tips text</li>
+			<li>It's usually best to just pull out a strip and read it without any prompting like "My grampa always told me..." or "That makes me think of the time..."</li>
+			<li>Don't read the strip immediately, give the scene a few lines back and forth to establish the base reality and a bit of the character first.</li>
+			<li>You can have someone(not someone who will be performing in these scenes) pre read the sentences to make sure there isn't anything problematic.</li>
+			<li>Either way make sure the improvisers know they can omit anything from their strip they deem problematic or are uncomfortable saying.</li>
 		</ul><hr>
-		<h3>Sources</h3>
+		<h3>Variations</h3>
 		<ul>
-			<li>Sources text</li>
+			<li>Pick-up lines</li>
+				<ul>
+				<li>Have the audience members write pick-up lines on the strips.</li>
+				<li>Designate 2-3 improvisers to be the ones the pickup-ees and the others will get the sentence strips and be the pickup-ers</li>
+				<li>You can say they're at a bar or get a suggestion for where these pick-ups are happening.</li>
+				<li>The pickup-ers will take turns shooting their shot, coming up to talk to the pickup-ees, delivering their pick-up lines, and getting rejected.</li>
+				<li>It's fun if by the end, at least one of the pick-up lines works and that pair leave together.</li>
+				</ul>
+			<li>Eulogy</li>
+				<ul>
+				<li>Get an audience member to volunteer their name, the improvisers will be attending their funeral.</li>
+				<li>We designate the front center stage to be where the open casket is located.</li>
+				<li>The improvisers will approach in groups of 2 or 3, mix and matching performers each time they come back.</li>
+				<li>They will be playing the dead persons, friends, family, co workers, etc... Talking and sharing stories about the person using their sentence strips as inspiration.</li>
+				</ul>
+			<li>These are just couple variations we play, there are infinite possibilities so make up and experiment with your own.</li>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - <a href="sentences.html">Sentences</a> - 
