--- a/pages/warm_ups.html
+++ b/pages/warm_ups.html
@@ -143,23 +143,19 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
-		</ul><hr>
-		<h3>Example</h3>
-		<ul>
-			<li>Example text</li>
+			<li>The group forms a circle and everyone begins patting their legs in rhythm and chanting "zoom-ba zoom-ba".</li>
+			<li>One player will start by saying(in rhythm) "bunny bunny" while making two pairs of bunny ears with their hands and pointing them at themself.</li>
+			<li>That same player with then repeat the above step but point the bunny ears and someone else in the circle.</li>
+			<li>That person who was pointed to will repeat the above two steps pointing to a new person, and we pass it around the circle.</li>
+			<li>While any player is doing the bunny ears part, the two players on either side of them should face towards them and wave their arms left and right chanting "ticky tocky ticky tocky"!</li>
+			<li>This game can go as long as it needs to or until it feels like we've exhausted the fun or novelty of it.</li>
+			<li>Optionally the group can slowly ramp up the speed and end it once it becomes to fast to continue.</li>
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
-			<li>Purpose text</li>
-		</ul><hr>
-		<h3>Tips</h3>
-		<ul>
-			<li>Tips text</li>
-		</ul><hr>
-		<h3>Sources</h3>
-		<ul>
-			<li>Sources text</li>
+			<li>Great warm up to just prepare to be silly.</li>
+			<li>Helpful listening exercise.</li>
+			<li>Good for building up energy.</li>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="energy.html">Energy</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
