added character matching

--- a/pages/character.html
+++ b/pages/character.html
@@ -99,23 +99,37 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>Description text</li>
+			<li>Improvisers form a circle.</li>
+			<li>One improviser will cross the circle to approach another improviser and initiate a 3-4 line scene with them.</li>
+			<li>The initiating improviser will make a strong character choice, embracing the physicality, characteristics, and voice of that character as they approach and initiate.</li>
+			<li>The improviser who was approached will take on the same physicality, characteristics, and voice as the approaching improviser and respond to their initiation.</li>
+			<li>They should take on the same characteristics even if the approaching improviser makes it clear in their initiating line that they are not the same type of character(see example below).</li>
+			<li>After 3-4 lines total the inititating improviser will take the place of the other improviser, who will now approach someone else in the circle as a new character and initate a new 3-4 lines scene.</li>
+			<li>Go until everyone has had a turn to both initiate and respond to an initiation.</li>
 		</ul><hr>
 		<h3>Example</h3>
 		<ul>
-			<li>Example text</li>
+			<li>Different declared characters but matching anyway</li>
+			<ul>
+				<li>Improviser 1: *approaching hunched over, walking with a cane, speaking with an eldery voice* "When I was your age little timmy, baseballs only costs a nickle!"</li>
+				<li>Improviser 2: *taking on the same elderly physicality and voice* "Well gee wilikers Mr. Griffordson I can't get a toothpick for that price these days."</li>
+				<li>Improviser 1: "That's because the commies!"</li>
+			</ul>
+			<li>Both characters match the character and perspective</li>
+			<ul>
+				<li>Improviser 1: *approaching as a twitchy little gremlin* "Ehhhh! Grimble, I'm hungry for human flesh!"</li>
+				<li>Improviser 2: *taking on the same physicality* "Yes! I want a skin muffin and a venti blood frappe!"</li>
+				<li>Improviser 1: "Ooooh splurging today!!!"</li>
+			</ul>
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
-			<li>Purpose text</li>
-		</ul><hr>
-		<h3>Tips</h3>
-		<ul>
-			<li>Tips text</li>
+			<li>You get to play a variety of characters in a short amount of time.</li>
+			<li>You get to practice changing yourself based on someone else's actions/initation.</li>
 		</ul><hr>
 		<h3>Sources</h3>
 		<ul>
-			<li>Sources text</li>
+			<li>How to be the Greatest Improviser on Earth by Will Hines - p. 41</li>
 		</ul><hr>
 		<h4>Tags</h4>
 		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - <a href="warm_ups.html">Warm Up</a> - 
